# Enso-OS

./: README.md
datetime-applet/: .gitignore  CMakeLists.txt  README.md  meson.build
datetime-applet/data/: CMakeLists.txt  application.css  css.gresource.xml  ensodatetime.desktop  meson.build  org.pantheon.desktop.wingpanel.indicators.datetime.gschema.xml
datetime-applet/meson/: post_install.py
datetime-applet/po/: ak.po  ar.po  az.po  bg.po  bn.po  bs.po  ca.po  ckb.po  cs.po  da.po  datetime-indicator.pot  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  fi.po  fr.po  fr_CA.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  ku.po  lt.po  meson.build  ms.po  my.po  nb.po  nl.po  nn.po  pl.po  (+21 more)
datetime-applet/schemas/: CMakeLists.txt  org.pantheon.desktop.wingpanel.indicators.datetime.gschema.xml
datetime-applet/src/: CMakeLists.txt  DateIterator.vala  DateRange.vala  Indicator.vala  XfcePanelPlug.vala
datetime-applet/vapi/: libecal-1.2.deps  libecal-1.2.metadata  libical.vapi  libxfce4panel-2.0.deps  libxfce4panel-2.0.vapi  libxfconf-0.vapi
desktop-settings/: .travis.yml  CMakeLists.txt  README.md  config.vala.cmake  meson.build
desktop-settings/data/: css.gresource.xml  desktop-settings.desktop  meson.build
desktop-settings/debian/: README  changelog  control  copyright  rules  switchboard-plug-pantheon-shell.install
desktop-settings/po/: CMakeLists.txt  POTFILES  af.po  am.po  ar.po  be.po  bg.po  bn.po  bs.po  btk.po  ca.po  ckb.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fj.po  fo.po  fr.po  fr_CA.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  it.po  ja.po  ka.po  ko.po  (+44 more)
desktop-settings/set-wallpaper-contract/: CMakeLists.txt  meson.build  set-wallpaper.contract.in  set-wallpaper.vala
desktop-settings/src/: CMakeLists.txt  Cache.vala  Config.vala.in  Desktop.vala  DesktopWindow.vala  GalaSettings.vala  Translations.vala  meson.build
desktop-settings/vapi/: gnome-desktop-3.0.vapi
gala/data/: Makefile  Makefile.am  Makefile.in  gala-multitaskingview.desktop  gala-multitaskingview.desktop.in  gala-other.desktop  gala-wayland.desktop  gala.css  gala.desktop  gschemas.compiled  org.pantheon.desktop.gala.gschema.xml  org.pantheon.desktop.gala.gschema.xml.in
gala/docs/: Makefile  Makefile.am  Makefile.in
gala/lib/: ActivatableComponent.c  ActivatableComponent.vala  Makefile  Makefile.am  Makefile.in  Plugin.c  Plugin.vala  Utils.c  WindowIcon.c  WindowIcon.vala  WindowManager.c  WindowManager.vala  gala.h  gala.pc  gala.pc.in  gala.vapi  libgala.la  libgala_la-ActivatableComponent.lo  libgala_la-Plugin.lo  libgala_la-Utils.lo  libgala_la-WindowIcon.lo
galal/: .gitignore  .travis.yml  HACKING  Makefile  Makefile.am  Makefile.common  Makefile.in  README.md  config.h  config.h.meson  config.status  configure  configure.ac  deps.sh  libtool  meson.build  meson_options.txt  uncrustify.cfg
galal/autom4te.cache/: output.0  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
galal/daemon/: Main.vala  MenuDaemon.vala  meson.build
galal/data/: Makefile  Makefile.in  gala-multitaskingview.desktop  gala-multitaskingview.desktop.in  gala-other.desktop  gala-other.desktop.in  gala.css  gala.gresource.xml  gala.gschema.xml  gschemas.compiled  meson.build  notification.css  org.pantheon.desktop.gala.gschema.xml  org.pantheon.desktop.gala.gschema.xml.in
galal/debian/: README  README.Debian  README.source  changelog  control  copyright  postrm  rules
galal/docs/: Makefile  Makefile.in  meson.build
galal/lib/: ActivatableComponent.c  ActivatableComponent.vala  Constants.vala  Makefile  Makefile.in  Plugin.c  Plugin.vala  Utils.c  Utils.vala  WindowIcon.c  WindowIcon.vala  WindowManager.c  WindowManager.vala  gala.deps  gala.h  gala.pc  gala.pc.in  gala.vapi  libgala.la  libgala_la-WindowManager.lo  meson.build
galal/meson/: post_install.py
galal/plugins/: Makefile  Makefile.am  Makefile.in
galal/po/: Makefile  Makefile.in  Makevars  POTFILES  af.gmo  af.po  ak.gmo  ak.po  am.gmo  am.po  ar.gmo  ar.po  az.gmo  az.po  be.gmo  be.po  bg.gmo  bg.po  bs.gmo  bs.po  ca.gmo  ca.po  ckb.gmo  ckb.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en_CA.gmo  en_CA.po  en_GB.gmo  en_GB.po  eo.gmo  eo.po  es.gmo  es.po  (+108 more)
galal/src/: DBus.c  DBus.vala  DBusAccelerator.c  DBusAccelerator.vala  DockThemeManager.c  DockThemeManager.vala  DragDropAction.c  DragDropAction.vala  InternalUtils.c  InternalUtils.vala  KeyboardManager.c  KeyboardManager.vala  Main.c  Main.vala  Makefile  Makefile.am  Makefile.in  MediaFeedback.c  MediaFeedback.vala  NotificationStack.vala  PluginManager.c  PluginManager.vala  ScreenSaver.c  ScreenSaverManager.vala  ScreenshotManager.c  ScreenshotManager.vala  SessionManager.vala  Settings.c  Settings.vala  ShadowEffect.c  ShadowEffect.vala  TextShadowEffect.c  TextShadowEffect.vala  WindowListener.c  WindowListener.vala  WindowManager.c  WindowManager.vala  WorkspaceManager.c  WorkspaceManager.vala  gala  (+1 more)
galal/vapi/: Clutter-3.metadata  Clutter-4-custom.vala  Clutter-5.metadata  Clutter-6.metadata  Cogl-2.metadata  Cogl-4-custom.vala  Cogl-5-custom.vala  Cogl-5.metadata  Cogl-6-custom.vala  Cogl-6.metadata  Makefile  Makefile.am  Makefile.in  Meta-2.metadata  Meta-3.metadata  Meta-4.metadata  Meta-5.metadata  Meta-6.metadata  cogl-fixes.vapi  compat.vapi  config.vapi  gdesktopenums-3.0.vapi  gnome-desktop-3.0.vapi  libdeepin-mutter-fixes.vapi  (+54 more)
greeter/: AUTHORS  CMakeLists.txt  CMakeLists.txt.orig  CMakeLists_BASE_6627.txt  CMakeLists_REMOTE_6627.txt  README.md  deps.sh  meson.build
keyboard-settings/: CMakeLists.txt  README.md  config.vala.cmake  meson.build
mouse-touchpad-settings/: .travis.yml  README.md  meson.build
panther_launcher/: CMakeLists.txt  HISTORY.md  Makefile  PKGBUILD  README.md  cmake_install.cmake  install_manifest.txt  panther_launcher.avprj
useraccounts-settings/: .travis.yml  CMakeLists.txt  COPYRIGHT  README.md  config.vala.cmake
welcome/: CMakeLists.txt  config.h.cmake
(+2681 files in other folders)
